; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_video.c_acpi_video_unregister.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_video.c_acpi_video_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@register_count = common dso_local global i64 0, align 8
@acpi_video_bus = common dso_local global i32 0, align 4
@ACPI_VIDEO_CLASS = common dso_local global i32 0, align 4
@acpi_root_dir = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @acpi_video_unregister() #0 {
  %1 = load i64, i64* @register_count, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %9

4:                                                ; preds = %0
  %5 = call i32 @acpi_bus_unregister_driver(i32* @acpi_video_bus)
  %6 = load i32, i32* @ACPI_VIDEO_CLASS, align 4
  %7 = load i32, i32* @acpi_root_dir, align 4
  %8 = call i32 @remove_proc_entry(i32 %6, i32 %7)
  store i64 0, i64* @register_count, align 8
  br label %9

9:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @acpi_bus_unregister_driver(i32*) #1

declare dso_local i32 @remove_proc_entry(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
